--- a/Faculdade/Computação/Codigo/templates/index.html
+++ b/Faculdade/Computação/Codigo/templates/index.html
@@ -9,5 +9,29 @@
 <body>
 <h1>Projeto Inteli Flask</h1>
 <h2>{{nome_desenvolvedor}}</h2>
+<div>
+    <h2>Eventos:</h2>
+    <table class="table">
+    <thead>
+    <tr>
+    <th>Nome</th>
+    <th>Data</th>
+    <th>Local</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for evento in eventos %}
+        <tr>
+        <td>{{evento.nome}}</td>
+        <td>{{evento.data}}</td>
+        <td>{{evento.local}}</td>
+        </tr>
+    {% endfor %}
+    </tbody>
+    </table>
+    </div>
+    <form action="/novo" method="get">
+        <input type="submit" value="Criar Novo">
+    </form>
 </body>
 </html>
